<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="239dp"
    tools:context=".PopUpWindow">

    <RelativeLayout
        android:id="@+id/iphone_se_3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/iphone_se_3"
        android:clipToOutline="true"
        android:layout_marginBottom="177dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_timing"
        android:layout_width="251.37dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:text="@string/add_timing"
        android:textAppearance="@style/add_timing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vector_19"
        android:layout_width="13.87dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vector_19"
        app:layout_constraintBottom_toBottomOf="@+id/add_timing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_timing" />

    <TextView
        android:id="@+id/string_labelfrom"
        android:layout_width="38dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_marginTop="27dp"
        android:layout_marginRight="271dp"
        android:layout_marginLeft="11dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/string_labe"
        android:textAppearance="@style/string_labe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iphone_se_3"/>

    <TextView
        android:id="@+id/string_labelto"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:layout_marginTop="27dp"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="148dp"
        android:lineSpacingExtra="0sp"
        android:text="@string/string_labelto"
        android:textAppearance="@style/string_labe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iphone_se_3"/>

    <TextView
        android:id="@+id/from_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select time"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/string_labelfrom" />

    <TextView
        android:id="@+id/to_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select time"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/from_time"
        app:layout_constraintTop_toBottomOf="@+id/string_labelto" />
    <!-- -Primary -->
    <Button
        android:id="@+id/save_btn"
        android:layout_width="320dp"
        android:layout_height="54dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/primary"
        android:backgroundTint="@color/button_color"
        android:textColor="@color/white"
        android:text="Save"
        android:textSize="20dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>